fix: team cards alignment

--- a/assets/styles/components/_team.scss
+++ b/assets/styles/components/_team.scss
@@ -6,7 +6,7 @@
   grid-template-columns: repeat(2, 160px);
   column-gap: 25px;
   row-gap: 16px;
-  justify-content: left;
+  justify-content: space-between;
 
   margin-top: 70px;
 
